--- a/project/templates/test.html
+++ b/project/templates/test.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <script type="text/javascript" src="http://127.0.0.1:8000/polls/1/"></script>
+    {% load poll_tags %}
+    {% show_poll "1" %}
 {% endblock content %}
