--- a/project/templates/askmeanything/poll_create.html
+++ b/project/templates/askmeanything/poll_create.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% include "poll_create_form.html" %}
+    {% include "askmeanything/poll_create_form.html" %}
 {% endblock %}
